--- a/index.html
+++ b/index.html
@@ -3,20 +3,54 @@
 <head>
 	<title>Flapper News</title>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.19/angular-animate.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body ng-app="flapperNews" ng-controller="MainController as mainCtrl">
 
-	<ul>
-		<li ng-repeat="post in mainCtrl.posts | orderBy: '-upvotes' ">
-			{{post.title}} - upvotes: {{post.upvotes}}
-		</li>
-	</ul>
+	<div class="row">
+		<div class="col-sm-6 col-sm-offset-3">
 
-	<form ng-submit="mainCtrl.addPost(mainCtrl.title)">
-		<input type="text", ng-model="mainCtrl.title">
-		<button type="submit"></button>
-	</form>
+			<div class="page-header">
+				<h1>Flapper News</h1>
+			</div>
+
+			<ul>
+				<li class="panel panel-default" ng-repeat="post in mainCtrl.posts" ng-style="{'bottom': mainCtrl.posts.indexOf(post)*70 + 'px'}">
+					<div class="panel-body">
+						<span class="glyphicon glyphicon-thumbs-up" ng-click="mainCtrl.incrementUpvotes(post, $index)"></span>
+						{{post.upvotes}}
+						<a ng-if="post.link" href="{{post.link}}">
+							{{post.title}}
+						</a>
+						<span ng-if="!post.link">
+							{{post.title}}				
+						</span>
+					</div>
+				</li>
+			</ul>
+
+			<form ng-submit="mainCtrl.addPost(mainCtrl.post)">
+				<div class="form-group">
+					<input class="form-control" type="text" placeholder="Title" ng-model="mainCtrl.post.title">
+				</div>
+
+				<div class="form-group">
+					<input class="form-control" type="text" placeholder="Link" ng-model="mainCtrl.post.link">
+				</div>
+				<button class="btn btn-primary" type="submit">Submit</button>
+			</form>			
+
+
+
+		</div>
+	</div>
+
+
 
 
 </body>
