--- a/index.html
+++ b/index.html
@@ -4,54 +4,21 @@
 	<title>Flapper News</title>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.19/angular-animate.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body ng-app="flapperNews" ng-controller="MainController as mainCtrl">
+<body ng-app="flapperNews">
 
 	<div class="row">
+
 		<div class="col-sm-6 col-sm-offset-3">
-
-			<div class="page-header">
-				<h1>Flapper News</h1>
-			</div>
-
-			<ul ng-style="{'height': mainCtrl.posts.length*70 + 'px'}">
-				<li class="panel panel-default" ng-repeat="post in mainCtrl.posts" ng-style="{'top':
-				(mainCtrl.posts.length - 1 - mainCtrl.posts.indexOf(post) ) * 70 + 'px'}" class="{{post.upvotes}}">
-
-			
-
-					<div class="panel-body">
-						<span class="glyphicon glyphicon-thumbs-up" ng-click="mainCtrl.incrementUpvotes(post, $index)"></span>
-						{{post.upvotes}}
-						<a ng-if="post.link" href="{{post.link}}">
-							{{post.title}}
-						</a>
-						<span ng-if="!post.link">
-							{{post.title}}				
-						</span>
-					</div>
-				</li>
-			</ul>
-
-			<form ng-submit="mainCtrl.addPost(mainCtrl.post)">
-				<div class="form-group">
-					<input class="form-control" type="text" placeholder="Title" ng-model="mainCtrl.post.title">
-				</div>
-
-				<div class="form-group">
-					<input class="form-control" type="text" placeholder="Link" ng-model="mainCtrl.post.link">
-				</div>
-				<button class="btn btn-primary" type="submit">Submit</button>
-			</form>			
-
-
-
+			<ui-view></ui-view>
 		</div>
+		
 	</div>
 
 
